[gd_scene load_steps=4 format=3 uid="uid://dygdvbw8bkdya"]

[ext_resource type="Texture2D" uid="uid://v7u0ipl2axjg" path="res://Sprites/Misc/basket.png" id="1"]
[ext_resource type="Script" path="res://Scripts/exit.gd" id="2"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(40, 40)

[node name="exit" type="Node2D" groups=["level_exit"]]
editor_description = "The exit for any given level. Place this where you want to player to exit to, and set the amount of pumpkins needed to unlock the exit."
script = ExtResource("2")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 6
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("1")

[node name="acceptPumpkin" type="Timer" parent="."]

[node name="pumpkinCheck" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="timeout" from="pumpkinCheck" to="." method="_on_pumpkin_check_timeout"]
